--- a/lineaxer-frontend/package.json
+++ b/lineaxer-frontend/package.json
@@ -1,8 +1,12 @@
 {
   "name": "lineaxer",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "author": "zytfo <khayalievartur@gmail.com>",
   "private": false,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zytfo/lineaxer"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
